Plugin surefire : Modification parametre reuseForks
svn path=/java/branches/merge-hawaiv6/; revision=6392